--- a/links.html
+++ b/links.html
@@ -10,6 +10,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://treesphere.com">
     <meta name="twitter:card" content="summary_large_image">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
     <title>TreeSphere - Mobile Game for Environmental Conservation | Virtual Trees, Real Impact</title>
     
     <link rel="canonical" href="https://treesphere.com" />
