--- a/links.html
+++ b/links.html
@@ -32,7 +32,7 @@
     }
     </script>
 </head>
-<body>
+<body class="bg-gray-50">
     <header class="gradient-bg text-white py-20 px-4">
         <div class="max-w-4xl mx-auto text-center">
             <h1 class="text-4xl md:text-6xl font-bold mb-4">TreeSphere: Mobile Game for Environmental Impact</h1>
