--- a/links.html
+++ b/links.html
@@ -16,7 +16,17 @@
     <link rel="canonical" href="https://treesphere.com" />
     <!-- Add favicon -->
     <link rel="icon" type="image/png" href="/favicon.png">
-    
+        <style>
+        .gradient-bg {
+            background: linear-gradient(135deg, #1a5f7a 0%, #159957 100%);
+        }
+        .hover-scale {
+            transition: transform 0.2s;
+        }
+        .hover-scale:hover {
+            transform: scale(1.05);
+        }
+    </style>
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
