--- a/links.html
+++ b/links.html
@@ -43,7 +43,7 @@
     </script>
 </head>
 <body class="bg-gray-50">
-    <div class="gradient-bg text-white py-20 px-4">
+    <div class="bg-green-500 text-white py-20 px-4">
         <div class="max-w-4xl mx-auto text-center">
             <h1 class="text-4xl md:text-6xl font-bold mb-4">TreeSphere</h1>
             <p class="text-xl md:text-2xl mb-8">Nurture Virtual Trees, Plant Real Change</p>
@@ -58,12 +58,12 @@
         <div class="mt-12 text-center">
             <h2 class="text-2xl font-bold text-green-800 mb-8">Follow Our Progress</h2>
             <div class="grid grid-cols-2 sm:grid-cols-3 gap-6 max-w-sm mx-auto">
-                <a href="https://x.com/treespheregame" class="text-green-700 hover:text-green-200 transition duration-200">
+                <a href="https://www.google.com/search?q=treesphere" class="text-green-700 hover:text-green-200 transition duration-200">
                     <div class="flex flex-col items-center">
                         <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24">
                             <path d="M23.953 4.57a10 10 0 01-2.825.775 4.958 4.958 0 002.163-2.723c-.951.555-2.005.959-3.127 1.184a4.92 4.92 0 00-8.384 4.482C7.69 8.095 4.067 6.13 1.64 3.162a4.822 4.822 0 00-.666 2.475c0 1.71.87 3.213 2.188 4.096a4.904 4.904 0 01-2.228-.616v.06a4.923 4.923 0 003.946 4.827 4.996 4.996 0 01-2.212.085 4.936 4.936 0 004.604 3.417 9.867 9.867 0 01-6.102 2.105c-.39 0-.779-.023-1.17-.067a13.995 13.995 0 007.557 2.209c9.053 0 13.998-7.496 13.998-13.985 0-.21 0-.42-.015-.63A9.935 9.935 0 0024 4.59z"/>
                         </svg>
-                        <span class="mt-2">Twitter(X)</span>
+                        <span class="mt-2">Google search TreeSphere</span>
                     </div>
                 </a>
                 <a href="https://discord.gg/TvkxUJfKWa" class="text-green-700 hover:text-green-200 transition duration-200">
