--- a/index.html
+++ b/index.html
@@ -2,10 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TreeSphere - Grow Virtual Trees, Plant Real Change</title>
-    <meta name="description" content="Join TreeSphere to grow virtual trees while making real environmental impact">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="TreeSphere - A mobile game that turns virtual tree growing into real-world environmental impact. Plant trees, learn forestry skills, and join a global community of environmental champions.">
+    <meta name="keywords" content="mobile game, environmental conservation, tree planting, virtual forest, sustainability game">
+    <meta property="og:title" content="TreeSphere - Virtual Trees, Real Impact">
+    <meta property="og:description" content="Play TreeSphere to grow virtual trees and make real environmental change. Join our global community of tree enthusiasts.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://treesphere.com">
+    <meta name="twitter:card" content="summary_large_image">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
+    <title>TreeSphere - Mobile Game for Environmental Conservation | Virtual Trees, Real Impact</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         .gradient-bg {
             background: linear-gradient(135deg, #1a5f7a 0%, #159957 100%);
