--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="max-w-4xl mx-auto text-center">
             <h1 class="text-4xl md:text-6xl font-bold mb-4">TreeSphere</h1>
             <p class="text-xl md:text-2xl mb-8">Nurture Virtual Trees, Plant Real Change</p>
-            <p class="text-lg mb-8"><a href=https://olteanugamestudio.itch.io/tree-sphere>Coming Soon: Click here to test the game on our DevBlog</a></p>
+            <p class="text-lg mb-8"><a href=https://olteanugamestudio.itch.io/tree-sphere>Coming Soon poimaine: Click here to test the game on our DevBlog</a></p>
             
             <form id="waitlist-form" class="flex flex-col sm:flex-row gap-4 items-center justify-center max-w-lg mx-auto">
                 <input 
