--- a/about.html
+++ b/about.html
@@ -1,1 +1,199 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="TreeSphere - A mobile game that turns virtual tree growing into real-world environmental impact. Plant trees, learn forestry skills, and join a global community of environmental champions.">
+    <meta name="keywords" content="mobile game, environmental conservation, tree planting, virtual forest, sustainability game">
+    <meta property="og:title" content="TreeSphere - Virtual Trees, Real Impact">
+    <meta property="og:description" content="Play TreeSphere to grow virtual trees and make real environmental change. Join our global community of tree enthusiasts.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://treesphere.com">
+    <meta name="twitter:card" content="summary_large_image">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
+    <title>TreeSphere - Mobile Game for Environmental Conservation | Virtual Trees, Real Impact</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        .gradient-bg {
+            background: linear-gradient(135deg, #1a5f7a 0%, #159957 100%);
+        }
+        .hover-scale {
+            transition: transform 0.2s;
+        }
+        .hover-scale:hover {
+            transform: scale(1.05);
+        }
+    </style>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2KYHVLZYNC"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-2KYHVLZYNC');
+</script>
+</head>
+<body class="bg-gray-50">
+    <div class="gradient-bg text-white py-20 px-4">
+        <div class="max-w-4xl mx-auto text-center">
+            <h1 class="text-4xl md:text-6xl font-bold mb-4">TreeSphere</h1>
+            <p class="text-xl md:text-2xl mb-8">Nurture Virtual Trees, Plant Real Change</p>
+            <p class="text-lg mb-8">Who are we?</p>
+            <p class="text-lg mb-8">We're a small community of environment-friendly developers and designers, who want to make a positive impact on how society treats our planet.</p>
+              <p class="text-lg mb-8">Through this project, we hope to raise awareness and inspire more people to join us and do something for the Earth!</p>
+
+        </div>
+    </div>
+
+    <main class="max-w-4xl mx-auto px-4 py-12">
+        <div class="grid md:grid-cols-2 gap-8">
+            <div class="bg-white p-6 rounded-lg shadow-md hover-scale">
+                <h2 class="text-2xl font-bold text-green-800 mb-4">🌱 Grow Your Forest</h2>
+                <p class="text-gray-700">
+                    Adopt and nurture virtual trees while learning real forestry skills.
+                    Each tree you grow contributes to actual environmental conservation efforts.
+                </p>
+            </div>
+
+            <div class="bg-white p-6 rounded-lg shadow-md hover-scale">
+                <h2 class="text-2xl font-bold text-green-800 mb-4">🌍 Real World Impact</h2>
+                <p class="text-gray-700">
+                    Your in-game progress directly supports tree-planting initiatives and
+                    environmental conservation projects worldwide.
+                </p>
+            </div>
+
+            <div class="bg-white p-6 rounded-lg shadow-md hover-scale">
+                <h2 class="text-2xl font-bold text-green-800 mb-4">📱 Mobile Game</h2>
+                <p class="text-gray-700">
+                    An engaging mobile experience that makes environmental impact fun and
+                    accessible. Care for your trees anywhere, anytime.
+                </p>
+            </div>
+
+            <div class="bg-white p-6 rounded-lg shadow-md hover-scale">
+                <h2 class="text-2xl font-bold text-green-800 mb-4">🤝 Join The Community</h2>
+                <p class="text-gray-700">
+                    Connect with fellow tree enthusiasts, share achievements, and
+                    participate in global conservation challenges.
+                </p>
+            </div>
+        </div>
+
+
+        <div class="mt-12 text-center">
+            <h2 class="text-2xl font-bold text-green-800 mb-8">Follow Our Progress</h2>
+            <div class="grid grid-cols-2 sm:grid-cols-3 gap-6 max-w-sm mx-auto">
+                <a href="https://x.com/treespheregame" class="text-green-700 hover:text-green-200 transition duration-200">
+                    <div class="flex flex-col items-center">
+                        <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24">
+                            <path d="M23.953 4.57a10 10 0 01-2.825.775 4.958 4.958 0 002.163-2.723c-.951.555-2.005.959-3.127 1.184a4.92 4.92 0 00-8.384 4.482C7.69 8.095 4.067 6.13 1.64 3.162a4.822 4.822 0 00-.666 2.475c0 1.71.87 3.213 2.188 4.096a4.904 4.904 0 01-2.228-.616v.06a4.923 4.923 0 003.946 4.827 4.996 4.996 0 01-2.212.085 4.936 4.936 0 004.604 3.417 9.867 9.867 0 01-6.102 2.105c-.39 0-.779-.023-1.17-.067a13.995 13.995 0 007.557 2.209c9.053 0 13.998-7.496 13.998-13.985 0-.21 0-.42-.015-.63A9.935 9.935 0 0024 4.59z"/>
+                        </svg>
+                        <span class="mt-2">Twitter(X)</span>
+                    </div>
+                </a>
+                <a href="https://discord.gg/TvkxUJfKWa" class="text-green-700 hover:text-green-200 transition duration-200">
+                    <div class="flex flex-col items-center">
+                        <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24">
+                            <path d="M19.27 5.33C17.94 4.71 16.5 4.26 15 4a.09.09 0 0 0-.07.03c-.18.33-.39.76-.53 1.09a16.09 16.09 0 0 0-4.8 0c-.14-.34-.35-.76-.54-1.09c-.01-.02-.04-.03-.07-.03c-1.5.26-2.93.71-4.27 1.33c-.01 0-.02.01-.03.02c-2.72 4.07-3.47 8.03-3.1 11.95c0 .02.01.04.03.05c1.8 1.32 3.53 2.12 5.24 2.65c.03.01.06 0 .07-.02c.4-.55.76-1.13 1.07-1.74c.02-.04 0-.08-.04-.09c-.57-.22-1.11-.48-1.64-.78c-.04-.02-.04-.08-.01-.11c.11-.08.22-.17.33-.25c.02-.02.05-.02.07-.01c3.44 1.57 7.15 1.57 10.55 0c.02-.01.05-.01.07.01c.11.09.22.17.33.26c.04.03.04.09-.01.11c-.52.31-1.07.56-1.64.78c-.04.01-.05.06-.04.09c.32.61.68 1.19 1.07 1.74c.03.01.06.02.09.01c1.72-.53 3.45-1.33 5.25-2.65c.02-.01.03-.03.03-.05c.44-4.53-.73-8.46-3.1-11.95c-.01-.01-.02-.02-.04-.02zM8.52 14.91c-1.03 0-1.89-.95-1.89-2.12s.84-2.12 1.89-2.12c1.06 0 1.9.96 1.89 2.12c0 1.17-.84 2.12-1.89 2.12zm6.97 0c-1.03 0-1.89-.95-1.89-2.12s.84-2.12 1.89-2.12c1.06 0 1.9.96 1.89 2.12c0 1.17-.83 2.12-1.89 2.12z"/>
+                        </svg>
+                        <span class="mt-2">Discord</span>
+                    </div>
+                </a>
+                <a href="https://www.instagram.com/treespheregame/" class="text-green-700 hover:text-green-200 transition duration-200">
+                    <div class="flex flex-col items-center">
+                        <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24">
+                            <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"/>
+                        </svg>
+                        <span class="mt-2">Instagram</span>
+                    </div>
+                </a>
+                <a href="https://www.facebook.com/treespheregame/" class="text-green-700 hover:text-green-200 transition duration-200">
+                    <div class="flex flex-col items-center">
+                        <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24">
+                            <path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/>
+                        </svg>
+                        <span class="mt-2">Facebook</span>
+                    </div>
+                </a>
+                <a href="https://www.youtube.com/@treesphere" class="text-green-700 hover:text-green-200 transition duration-200">
+                    <div class="flex flex-col items-center">
+                        <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24">
+                            <path d="M23.498 6.186a3.016 3.016 0 0 0-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 0 0 2.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 0 0 2.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"/>
+                        </svg>
+                        <span class="mt-2">YouTube</span>
+                    </div>
+                </a>
+                                <a href="https://www.linkedin.com/in/treesphere-game-200a31334/" class="text-green-700 hover:text-green-200 transition duration-200">
+                    <div class="flex flex-col items-center">
+                        <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24">
+                            <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
+                        </svg>
+                        <span class="mt-2">LinkedIN</span>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </main>
+
+    <!-- Footer -->
+    <footer class="glass-effect bg-green-600 py-12 mt-12 text-center">
+
+        <div class="max-w-6xl mx-auto px-8">
+            <div class="grid md:grid-cols-3 gap-6">
+
+                <div>
+                    <h3 class="text-white font-bold mb-4"></h3>
+                    <ul class="space-y-2">
+                        <li><a href="#" class="text-green-300 hover:text-white transition-colors">About</a></li>
+
+                    </ul>
+                </div>
+                <div>
+                    <h3 class="text-white font-bold mb-4"></h3>
+                    <ul class="space-y-2">
+                        <li><a href="#" class="text-green-300 hover:text-white transition-colors">Impact</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <h3 class="text-white font-bold mb-4"></h3>
+                    <ul class="space-y-2">
+                        <li><a href="#" class="text-green-300 hover:text-white transition-colors">Partner With Us</a></li>
+
+                    </ul>
+                </div>
+            </div>
+            <div class="mt-12 pt-8 border-t border-green-800">
+                <p class="text-center text-green-100">© 2024 TreeSphere. All rights reserved.</p>
+            </div>
+        </div>
+    </footer>
+
+    <script>
+        document.getElementById('waitlist-form').addEventListener('submit', async (e) => {
+            e.preventDefault();
+            const email = e.target.querySelector('input[type="email"]').value;
+            
+            try {
+                const response = await fetch('https://formspree.io/f/mdkokpwk', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                    body: JSON.stringify({ email }),
+                });
+                
+                if (response.ok) {
+                    alert('Thank you for joining our waitlist!');
+                    e.target.reset();
+                } else {
+                    throw new Error('Failed to submit');
+                }
+            } catch (error) {
+                alert('Sorry, there was an error. Please try again later.');
+            }
+        });
+    </script>
+</body>
+</html>
