--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="TreeSphere - A mobile game that turns virtual tree growing into real-world environmental impact. Plant trees, learn forestry skills, and join a global community of environmental champions.">
     <meta name="keywords" content="mobile game, environmental conservation, tree planting, virtual forest, sustainability game">
-    <meta property="og:title" content="TreeSphere - Virtual Trees, Real Impact">
+    <meta property="og:title" content="About TreeSphere - Virtual Trees, Real Impact">
     <meta property="og:description" content="Play TreeSphere to grow virtual trees and make real environmental change. Join our global community of tree enthusiasts.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://treesphere.com">
@@ -37,7 +37,7 @@
 <body class="bg-gray-50">
     <div class="gradient-bg text-white py-20 px-4">
         <div class="max-w-4xl mx-auto text-center">
-            <h1 class="text-4xl md:text-6xl font-bold mb-4">TreeSphere</h1>
+            <h1 class="text-4xl md:text-6xl font-bold mb-4"><a href="https://treesphere.github.io/game/">TreeSphere</a>a</h1>
             <p class="text-xl md:text-2xl mb-8">Nurture Virtual Trees, Plant Real Change</p>
             <p class="text-lg mb-8">Who are we?</p>
             <p class="text-lg mb-8">We're a small community of environment-friendly developers and designers, who want to make a positive impact on how society treats our planet.</p>
@@ -146,20 +146,20 @@
                 <div>
                     <h3 class="text-white font-bold mb-4"></h3>
                     <ul class="space-y-2">
-                        <li><a href="#" class="text-green-300 hover:text-white transition-colors">About</a></li>
+                        <li><a href="https://treesphere.github.io/game/about.html" class="text-green-300 hover:text-white transition-colors">About</a></li>
 
                     </ul>
                 </div>
                 <div>
                     <h3 class="text-white font-bold mb-4"></h3>
                     <ul class="space-y-2">
-                        <li><a href="#" class="text-green-300 hover:text-white transition-colors">Impact</a></li>
+                        <li><a href="https://treesphere.github.io/game/impact.html" class="text-green-300 hover:text-white transition-colors">Impact</a></li>
                     </ul>
                 </div>
                 <div>
                     <h3 class="text-white font-bold mb-4"></h3>
                     <ul class="space-y-2">
-                        <li><a href="#" class="text-green-300 hover:text-white transition-colors">Partner With Us</a></li>
+                        <li><a href="https://treesphere.github.io/game/partner.html" class="text-green-300 hover:text-white transition-colors">Partner With Us</a></li>
 
                     </ul>
                 </div>
