--- a/index.html
+++ b/index.html
@@ -156,20 +156,20 @@
                 <div>
                     <h3 class="text-white font-bold mb-4"></h3>
                     <ul class="space-y-2">
-                        <li><a href="#" class="text-green-300 hover:text-white transition-colors">About</a></li>
+                        <li><a href="https://treesphere.github.io/game/about.html" class="text-green-300 hover:text-white transition-colors">About</a></li>
 
                     </ul>
                 </div>
                 <div>
                     <h3 class="text-white font-bold mb-4"></h3>
                     <ul class="space-y-2">
-                        <li><a href="#" class="text-green-300 hover:text-white transition-colors">Impact</a></li>
+                        <li><a href="https://treesphere.github.io/game/impact.html" class="text-green-300 hover:text-white transition-colors">Impact</a></li>
                     </ul>
                 </div>
                 <div>
                     <h3 class="text-white font-bold mb-4"></h3>
                     <ul class="space-y-2">
-                        <li><a href="#" class="text-green-300 hover:text-white transition-colors">Partner With Us</a></li>
+                        <li><a href="https://treesphere.github.io/game/partner.html" class="text-green-300 hover:text-white transition-colors">Partner With Us</a></li>
 
                     </ul>
                 </div>
