--- a/about.html
+++ b/about.html
@@ -37,12 +37,12 @@
 <body class="bg-gray-50">
     <div class="gradient-bg text-white py-20 px-4">
         <div class="max-w-4xl mx-auto text-center">
-            <h1 class="text-4xl md:text-6xl font-bold mb-4"><a href="https://treesphere.github.io/game/">TreeSphere</a>a</h1>
+            <h1 class="text-4xl md:text-6xl font-bold mb-4"><a href="https://treesphere.github.io/game/">TreeSphere</a></h1>
             <p class="text-xl md:text-2xl mb-8">Nurture Virtual Trees, Plant Real Change</p>
             <p class="text-lg mb-8">Who are we?</p>
-            <p class="text-lg mb-8">We're a small community of environment-friendly developers and designers, who want to make a positive impact on how society treats our planet.</p>
-              <p class="text-lg mb-8">Through this project, we hope to raise awareness and inspire more people to join us and do something for the Earth!</p>
-
+            <p class="text-lg mb-8">We're a small community of environment-friendly developers and designers, who want to make a positive impact on how society treats the Earth.</p>
+            <p class="text-lg mb-8">Through this project, we hope to raise awareness and inspire more people to join us and do something for the future of our home planet.</p>
+            <p class="text-lg mb-8">We would be delighted if you could help us out in any way, either by liking and sharing our posts on social media, playing our game or contributing to our cause, or even partnering with us for future developments!</p>
         </div>
     </div>
 
