--- a/impact.html
+++ b/impact.html
@@ -5,7 +5,7 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="TreeSphere - A mobile game that turns virtual tree growing into real-world environmental impact. Plant trees, learn forestry skills, and join a global community of environmental champions.">
     <meta name="keywords" content="mobile game, environmental conservation, tree planting, virtual forest, sustainability game">
-    <meta property="og:title" content="TreeSphere - Virtual Trees, Real Impact">
+    <meta property="og:title" content="About TreeSphere - Virtual Trees, Real Impact">
     <meta property="og:description" content="Play TreeSphere to grow virtual trees and make real environmental change. Join our global community of tree enthusiasts.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://treesphere.com">
@@ -37,22 +37,11 @@
 <body class="bg-gray-50">
     <div class="gradient-bg text-white py-20 px-4">
         <div class="max-w-4xl mx-auto text-center">
-            <h1 class="text-4xl md:text-6xl font-bold mb-4">TreeSphere</h1>
+            <h1 class="text-4xl md:text-6xl font-bold mb-4"><a href="https://treesphere.github.io/game/">TreeSphere</a></h1>
             <p class="text-xl md:text-2xl mb-8">Nurture Virtual Trees, Plant Real Change</p>
-            <p class="text-lg mb-8"><a href=https://olteanugamestudio.itch.io/tree-sphere>Coming Soon: Click here to test the game on our DevBlog</a></p>
-            
-            <form id="waitlist-form" class="flex flex-col sm:flex-row gap-4 items-center justify-center max-w-lg mx-auto">
-                <input 
-                    type="email" 
-                    placeholder="Enter your email" 
-                    class="px-4 py-2 rounded-lg text-gray-900 w-full sm:w-auto" 
-                    required>
-                <button 
-                    type="submit" 
-                    class="bg-green-600 hover:bg-green-700 text-white px-6 py-2 rounded-lg transition duration-200 w-full sm:w-auto">
-                    Join Waitlist
-                </button>
-            </form>
+            <p class="text-lg mb-8">What is our impact so far?</p>
+            <p class="text-lg mb-8">We've just begun our journey in September 2024, but we're making great progress and we will keep you updated about our digital and real-world impact right here on this page! <br> Stay tuned, big things are happening soon!</p>
+
         </div>
     </div>
 
@@ -156,20 +145,20 @@
                 <div>
                     <h3 class="text-white font-bold mb-4"></h3>
                     <ul class="space-y-2">
-                        <li><a href="#" class="text-green-300 hover:text-white transition-colors">About</a></li>
+                        <li><a href="https://treesphere.github.io/game/about.html" class="text-green-300 hover:text-white transition-colors">About</a></li>
 
                     </ul>
                 </div>
                 <div>
                     <h3 class="text-white font-bold mb-4"></h3>
                     <ul class="space-y-2">
-                        <li><a href="#" class="text-green-300 hover:text-white transition-colors">Impact</a></li>
+                        <li><a href="https://treesphere.github.io/game/impact.html" class="text-green-300 hover:text-white transition-colors">Impact</a></li>
                     </ul>
                 </div>
                 <div>
                     <h3 class="text-white font-bold mb-4"></h3>
                     <ul class="space-y-2">
-                        <li><a href="#" class="text-green-300 hover:text-white transition-colors">Partner With Us</a></li>
+                        <li><a href="https://treesphere.github.io/game/partner.html" class="text-green-300 hover:text-white transition-colors">Partner With Us</a></li>
 
                     </ul>
                 </div>
