--- a/impact.html
+++ b/impact.html
@@ -41,7 +41,7 @@
             <p class="text-xl md:text-2xl mb-8">Nurture Virtual Trees, Plant Real Change</p>
             <p class="text-lg mb-8">What is our impact so far?</p>
             <p class="text-lg mb-8">We've just begun our journey in September 2024, but we're making great progress and we will keep you updated about our digital and real-world impact right here on this page! <br> Stay tuned, big things are happening soon!</p>
-              <p class="text-lg mb-8">Want to contribute? Go to our <a href="patreon.com">Patreon</a> to help us make a difference.</p>
+              <p class="text-lg mb-8">Want to contribute? Go to our <a href="www.patreon.com/TreeSphere">Patreon</a> to help us make a difference.</p>
 
         </div>
     </div>
