--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
             <p class="text-xl md:text-2xl mb-8">Nurture Virtual Trees, Plant Real Change</p>
     <br>
                             <a href="https://patreon.com/TreeSphere" class="text-green-700 hover:text-green-200 transition duration-200">
-                    <div class="flex flex-col items-center">
-<svg class="w-8 h-8" fill="white" viewBox="0 0 24 24">
-    <path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/>
-</svg>
-                        <span class="mt-2">Donate</span>
-                    </div>
+<button class="inline-flex items-center px-4 py-2 hover:opacity-75 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500 rounded-md">
+   <span class="mr-2 font-medium">Donate</span>
+   <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
+       <path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/>
+   </svg>
+</button>
                 </a>
             <p class="text-lg mb-8"><a href=https://olteanugamestudio.itch.io/tree-sphere>Coming Soon: Click here to test the game on our DevBlog</a></p>
             
