--- a/index.html
+++ b/index.html
@@ -42,26 +42,13 @@
     <br>
                             <a href="https://patreon.com/TreeSphere" class="text-green-700 hover:text-green-200 transition duration-200">
 <button class="rounded-md bg-green-600 hover:bg-green-700 text-white px-6 py-2 rounded-lg transition duration-200 w-full sm:w-auto">
-   <span class="mr-2 font-medium">Donate</span>
+   Donate
    <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
        <path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/>
    </svg>
 </button>
                 </a>
-            <p class="text-lg mb-8"><a href=https://olteanugamestudio.itch.io/tree-sphere>Coming Soon: Click here to test the game on our DevBlog</a></p>
-            
-            <form id="waitlist-form" class="flex flex-col sm:flex-row gap-4 items-center justify-center max-w-lg mx-auto">
-                <input 
-                    type="email" 
-                    placeholder="Enter your email" 
-                    class="px-4 py-2 rounded-lg text-gray-900 w-full sm:w-auto" 
-                    required>
-                <button 
-                    type="submit" 
-                    class="bg-green-600 hover:bg-green-700 text-white px-6 py-2 rounded-lg transition duration-200 w-full sm:w-auto">
-                    Join Waitlist
-                </button>
-            </form> 
+
 
         </div>
     </div>
@@ -104,6 +91,21 @@
 
         <div class="mt-12 text-center">
             <h2 class="text-2xl font-bold text-green-800 mb-8">Follow Our Progress</h2>
+                            <p class="text-lg mb-8"><a href=https://olteanugamestudio.itch.io/tree-sphere>Try the game on our DevBlog</a></p>
+            
+            <form id="waitlist-form" class="flex flex-col sm:flex-row gap-4 items-center justify-center max-w-lg mx-auto">
+                <input 
+                    type="email" 
+                    placeholder="Enter your email" 
+                    class="px-4 py-2 rounded-lg text-gray-900 w-full sm:w-auto" 
+                    required>
+                <button 
+                    type="submit" 
+                    class="bg-green-600 hover:bg-green-700 text-white px-6 py-2 rounded-lg transition duration-200 w-full sm:w-auto">
+                    Or Join the Waitlist for Launch Updates
+                </button>
+            </form> 
+            <br>
             <div class="grid grid-cols-2 sm:grid-cols-3 gap-6 max-w-sm mx-auto">
                 <a href="https://x.com/treespheregame" class="text-green-700 hover:text-green-200 transition duration-200">
                     <div class="flex flex-col items-center">
