--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <input 
                     type="email" 
                     placeholder="Enter your email" 
-                    class="px-4 py-2 rounded-lg text-gray-900 w-full sm:w-auto" 
+                    class="bg-green-600 hover:bg-green-700 text-white px-4 py-2 rounded-lg w-full sm:w-auto" 
                     required>
                 <button 
                     type="submit" 
