--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <button 
                     type="submit" 
                     class="bg-green-600 hover:bg-green-700 text-white px-6 py-2 rounded-lg transition duration-200 w-full sm:w-auto">
-                    Or Join the Waitlist for Launch Updates
+                    Join the Waitlist for Launch Updates
                 </button>
             </form> 
             <br>
