--- a/index.html
+++ b/index.html
@@ -94,16 +94,17 @@
                             <p class="text-lg mb-8"><a href=https://olteanugamestudio.itch.io/tree-sphere>Try the game on our DevBlog</a></p>
             
             <form id="waitlist-form" class="flex flex-col sm:flex-row gap-4 items-center justify-center max-w-lg mx-auto">
+                                <button 
+                    type="submit" 
+                    class="bg-green-600 hover:bg-green-700 text-white px-6 py-2 rounded-lg transition duration-200 w-full sm:w-auto">
+                    Receive Updates About the Game's Launch
+                </button>
                 <input 
                     type="email" 
                     placeholder="Enter your email" 
-                    class="bg-green-600 hover:bg-green-700 text-white px-4 py-2 rounded-lg w-full sm:w-auto" 
+                    class="bg-green-600 hover:bg-green-700 text-white px-4 py-2 rounded-lg transition duration-200 w-full sm:w-auto" 
                     required>
-                <button 
-                    type="submit" 
-                    class="bg-green-600 hover:bg-green-700 text-white px-6 py-2 rounded-lg transition duration-200 w-full sm:w-auto">
-                    Join the Waitlist for Launch Updates
-                </button>
+
             </form> 
             <br>
             <div class="grid grid-cols-2 sm:grid-cols-3 gap-6 max-w-sm mx-auto">
