--- a/about.html
+++ b/about.html
@@ -43,6 +43,15 @@
             <p class="text-lg mb-8">We're a small community of environment-friendly developers and designers, who want to make a positive impact on how society treats the Earth.</p>
             <p class="text-lg mb-8">Through this project, we hope to raise awareness and inspire more people to join us and do something for the future of our home planet.</p>
             <p class="text-lg mb-8">We would be delighted if you could help us out in any way, either by liking and sharing our posts on social media, playing our game or contributing to our cause, or even partnering with us for future developments!</p>
+
+            <a href="https://patreon.com/TreeSphere" class="text-green-700 hover:text-green-200 transition duration-200">
+    <button class="rounded-md bg-green-600 hover:bg-green-700 text-white px-6 py-2 rounded-lg transition duration-200 w-full sm:w-auto inline-flex items-center">
+        <span>Donate</span>
+        <svg class="w-6 h-6 ml-2" fill="currentColor" viewBox="0 0 24 24">
+            <path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/>
+        </svg>
+    </button>
+</a>
         </div>
     </div>
 
