--- a/impact.html
+++ b/impact.html
@@ -41,7 +41,15 @@
             <p class="text-xl md:text-2xl mb-8">Nurture Virtual Trees, Plant Real Change</p>
             <p class="text-lg mb-8">What is our impact so far?</p>
             <p class="text-lg mb-8">We've just begun our journey in September 2024, but we're making great progress and we will keep you updated about our digital and real-world impact right here on this page! <br> Stay tuned, big things are happening soon!</p>
-              <p class="text-lg mb-8">Want to contribute? Go to our <a href="https://patreon.com/TreeSphere">Patreon</a> to help us make a difference.</p>
+            <br>
+            <a href="https://patreon.com/TreeSphere" class="text-green-700 hover:text-green-200 transition duration-200">
+    <button class="rounded-md bg-green-600 hover:bg-green-700 text-white px-6 py-2 rounded-lg transition duration-200 w-full sm:w-auto inline-flex items-center">
+        <span>Donate</span>
+        <svg class="w-6 h-6 ml-2" fill="currentColor" viewBox="0 0 24 24">
+            <path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/>
+        </svg>
+    </button>
+</a>
 
         </div>
     </div>
