--- a/partner.html
+++ b/partner.html
@@ -40,6 +40,15 @@
             <h1 class="text-4xl md:text-6xl font-bold mb-4"><a href="https://treesphere.github.io/game/">TreeSphere</a></h1>
             <p class="text-xl md:text-2xl mb-8">Nurture Virtual Trees, Plant Real Change</p>
             <p class="text-lg mb-8">Please message us on any of our social media channels if you wish to discuss a partnership.</p>
+                        <br>
+            <a href="https://patreon.com/TreeSphere" class="text-green-700 hover:text-green-200 transition duration-200">
+    <button class="rounded-md bg-green-600 hover:bg-green-700 text-white px-6 py-2 rounded-lg transition duration-200 w-full sm:w-auto inline-flex items-center">
+        <span>Donate</span>
+        <svg class="w-6 h-6 ml-2" fill="currentColor" viewBox="0 0 24 24">
+            <path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/>
+        </svg>
+    </button>
+</a>
 
 
         </div>
